Allow java 8 usage